--- a/src/components/search-filter/search-filter.scss
+++ b/src/components/search-filter/search-filter.scss
@@ -1,5 +1,5 @@
 .filter {
-    margin-bottom: 60px;
+    margin-top: 25px;
     display: grid;
     grid-template: 70px 70px 70px/ 374px 374px;
     gap: 20px 30px;
