--- a/src/components/search-filter/search-filter.scss
+++ b/src/components/search-filter/search-filter.scss
@@ -1,7 +1,7 @@
 .filter {
     margin-top: 25px;
     display: grid;
-    grid-template: 70px 70px 70px/ 374px 374px;
+    grid-template: repeat(3, 70px) / repeat(2, 374px);
     gap: 20px 30px;
     grid-auto-flow: column;
     &__option {
