add search filter

--- a/src/components/coins-list/coins-list.scss
+++ b/src/components/coins-list/coins-list.scss
@@ -8,4 +8,8 @@
         text-decoration: none;
         color: inherit;
     }
+    &__not-found {
+        margin-top: 40px;
+        text-align: center;
+    }
 }
